# quick2wire-cpp-api

./: .gitignore  CMakeLists.txt
documentation/doxygen/: Doxyfile
documentation/software-engineering/: Makefile  make.bat
documentation/software-engineering/source/: conf.py  index.rst  index.rst~  intro.rst~  quick2wire-cpp-api.vpp
documentation/software-engineering/source/analysis/: actors.rst  fr.rst  intro.rst  nfr.rst  states.rst
documentation/software-engineering/source/design/: architecture.rst  data.rst
documentation/software-engineering/source/project_mgmt/: intro.rst
documentation/sphinx/: Makefile  make.bat
documentation/sphinx/source/: conf.py  examples.rst  index.rst  principles.rst  reference.rst  usage.rst
documentation/sphinx/source/reference/: gpio-admin.rst  gpio.rst  pin.rst  pinbank.rst
documentation/sphinx/source/software_engineering/: intro.rst  quick2wire-cpp-api.vpp
documentation/sphinx/source/software_engineering/analysis/: actors.rst  fr.rst  goals.rst  intro.rst  ir.rst  nfr.rst  static.rst  uc.rst
documentation/sphinx/source/software_engineering/design/: components.rst  deployment.rst  intro.rst  procedimental.rst  static.rst
documentation/sphinx/source/software_engineering/project_mgmt/: intro.rst
include/: board_revision.hpp  gpio.hpp
src/: board_revision.cpp  gpio.cpp  main.cpp
