CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( QUICK2WIRE-C )

SET(QUICK2WIRE_SRC
  ${CMAKE_SOURCE_DIR}/src/gpio.cpp
  ${CMAKE_SOURCE_DIR}/src/board_revision.cpp
)

SET(DEMO_QUICK2WIRE_SRC
	${CMAKE_SOURCE_DIR}/src/main.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(CMAKE_EXE_LINKER_FLAGS "-Wall -Wno-write-strings")
add_definitions(${CMAKE_EXE_LINKER_FLAGS})

ADD_LIBRARY( quick2wire SHARED ${QUICK2WIRE_SRC})

ADD_EXECUTABLE(quick2wire_demo ${DEMO_QUICK2WIRE_SRC})

TARGET_LINK_LIBRARIES(quick2wire_demo quick2wire)