CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( QUICK2WIRE-C )

SET(QUICK2WIRE_SRC
  ${CMAKE_SOURCE_DIR}/src/gpio.cpp
  ${CMAKE_SOURCE_DIR}/src/board_revision.cpp
)

SET(DEMO_QUICK2WIRE_SRC
	${CMAKE_SOURCE_DIR}/src/main.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(CMAKE_EXE_LINKER_FLAGS "-Wall -Wno-write-strings -O2")
add_definitions(${CMAKE_EXE_LINKER_FLAGS})

ADD_LIBRARY( quick2wire SHARED ${QUICK2WIRE_SRC})

ADD_EXECUTABLE(quick2wire_demo ${DEMO_QUICK2WIRE_SRC})

TARGET_LINK_LIBRARIES(quick2wire_demo quick2wire)

INSTALL(TARGETS quick2wire EXPORT quick2wire DESTINATION /usr/lib PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(EXPORT quick2wire NAMESPACE quick2wire_ DESTINATION /usr/lib/quick2wire)

#http://stackoverflow.com/a/11097012/2628463
file(GLOB DEPLOY_FILES_AND_DIRS "${CMAKE_SOURCE_DIR}/include/*.hpp")
foreach(ITEM ${DEPLOY_FILES_AND_DIRS})
   IF( IS_DIRECTORY "${ITEM}" )
      LIST( APPEND DIRS_TO_DEPLOY "${ITEM}" )
   ELSE()
      LIST( APPEND FILES_TO_DEPLOY "${ITEM}" )
   ENDIF()
endforeach()

INSTALL( FILES ${FILES_TO_DEPLOY} DESTINATION /usr/include/quick2wire PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL( DIRECTORY ${DIRS_TO_DEPLOY} DESTINATION /usr/include/quick2wire PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)